--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<div class="container"></div>
-<app-header></app-header>
+<div class="container">
+    <app-header></app-header>
+</div>
+<app-footer></app-footer>
