Adicionando as funcionalidade do ServiceCarrinho na página de carrinho

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
                     <a href="">Produtos</a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="/carrinho">
                         <i class="fa-solid fa-cart-shopping"></i>
                         Carrinho
                         <span class="badge-carrinho">{{ carrinhoService.obtemCarrinho().length }}</span>
