--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">Contato</a>
+                    <a href="/contato">Contato</a>
                 </li>
                 <li>
                     <a href=""><i class="fa-brands fa-facebook-f"></i></a>
