Validação (ReactiveFormsModule) adicionada ao formulário de contato

--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -42,3 +42,12 @@
 .contact-form button:disabled:hover {
     filter: none;
 }
+
+/* FormControls */
+.valid {
+    border-color: green;
+}
+
+.invalid {
+    border-color: red;
+}
